--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -82,6 +82,19 @@
                 android:layout_height="wrap_content"
                 android:padding="16dp">
 
+                <Button
+                    android:id="@+id/track_button"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@color/white"
+                    android:backgroundTint="#185502"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Track"
+                    android:textSize="25sp" />
+
                 <TextView
                     android:id="@+id/drops_title"
                     android:layout_width="wrap_content"
