refactor: restructure navbar and add navbar logic for all classes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -75,12 +75,11 @@
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="24dp"
         android:layout_marginTop="38dp"
-        android:layout_marginEnd="290dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
@@ -291,7 +290,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/home_navbar"
                 android:contentDescription="Home"
                 android:clickable="true"
@@ -303,38 +302,37 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/recipe_navbar"
                 android:contentDescription="Recipes"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/nav_checklist"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:scaleType="fitXY"
-                android:src="@drawable/checklist_navbar"
-                android:contentDescription="Boss Checklist"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="15dp" />
+                android:padding="5dp" />
 
             <ImageView
                 android:id="@+id/nav_beastiary"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/beastiary_navbar"
                 android:contentDescription="Beastiary"
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="10dp" />
-        </LinearLayout>
 
+            <ImageView
+                android:id="@+id/nav_checklist"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/checklist_navbar"
+                android:contentDescription="Boss Checklist"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="5dp" />
+        </LinearLayout>
     </FrameLayout>
 
     <androidx.fragment.app.FragmentContainerView
