--- a/app/src/main/res/layout/edit_potion_loadout.xml
+++ b/app/src/main/res/layout/edit_potion_loadout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1C0340"
-    tools:context=".ItemFragment">
+    android:background="#1C0340">
 
     <TextView
         android:id="@+id/potion_title"
@@ -128,7 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/home_navbar"
                 android:contentDescription="Home"
                 android:clickable="true"
@@ -140,36 +139,36 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/recipe_navbar"
                 android:contentDescription="Recipes"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="15dp" />
-
-            <ImageView
-                android:id="@+id/nav_checklist"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:scaleType="fitXY"
-                android:src="@drawable/checklist_navbar"
-                android:contentDescription="Boss Checklist"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="15dp" />
+                android:padding="5dp" />
 
             <ImageView
                 android:id="@+id/nav_beastiary"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/beastiary_navbar"
                 android:contentDescription="Beastiary"
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/nav_checklist"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:src="@drawable/checklist_navbar"
+                android:contentDescription="Boss Checklist"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="5dp" />
         </LinearLayout>
     </FrameLayout>
 
