--- a/app/src/main/res/layout/connect_screen.xml
+++ b/app/src/main/res/layout/connect_screen.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#1C0340">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#1C0340"
-        android:fillViewport="true">
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:descendantFocusability="afterDescendants"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,24 +20,23 @@
 
             <ImageView
                 android:id="@+id/connect_background"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="400dp"
-                android:layout_marginTop="73dp"
                 android:scaleType="fitXY"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/launch_background_1" />
 
             <ImageView
                 android:id="@+id/logo_1"
                 android:layout_width="349dp"
                 android:layout_height="109dp"
-                android:layout_marginTop="68dp"
                 android:scaleType="fitXY"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/connect_background"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
                 app:srcCompat="@drawable/terraria_logo_1" />
 
             <ImageView
@@ -42,27 +44,26 @@
                 android:layout_width="304dp"
                 android:layout_height="81dp"
                 android:scaleType="fitXY"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.752"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/logo_1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/terraria_sublogo_1" />
 
             <TextView
                 android:id="@+id/connect_intro"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginStart="44dp"
-                android:layout_marginTop="@dimen/connect_intro_top_margin"
                 android:layout_marginEnd="44dp"
                 android:fontFamily="@font/andy_bold"
                 android:text="@string/intro_text"
                 android:textAlignment="center"
                 android:textColor="#37BB07"
                 android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/connect_background"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/connect_background" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <FrameLayout
                 android:layout_width="50dp"
@@ -70,9 +71,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/connect_intro"
-                app:layout_constraintBottom_toTopOf="@+id/ip_header"
-                app:layout_constraintVertical_bias="0.5">
+                app:layout_constraintTop_toBottomOf="@+id/connect_intro">
 
                 <ImageButton
                     android:id="@+id/help_button"
@@ -96,39 +95,33 @@
                 android:id="@+id/ip_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="153dp"
-                android:layout_marginTop="@dimen/ip_header_top_margin"
-                android:layout_marginEnd="153dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/andy_bold"
                 android:text="IP and Port"
                 android:textColor="#37BB07"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/connect_intro"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/connect_intro" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/ip_subheader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="153dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="153dp"
                 android:fontFamily="@font/andy_bold"
                 android:text="@string/ip_example"
                 android:textColor="#37BB07"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ip_header"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ip_header" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <EditText
                 android:id="@+id/ip_form"
                 android:layout_width="270dp"
                 android:layout_height="33dp"
-                android:layout_marginStart="70dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="70dp"
                 android:background="#C5C4C4"
                 android:ems="10"
                 android:inputType="text"
@@ -136,9 +129,9 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ip_subheader"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ip_subheader" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <Button
                 android:id="@+id/connect_button"
@@ -151,9 +144,10 @@
                 android:text="Connect"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ip_form"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ip_form" />
+                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
@@ -162,9 +156,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
