--- a/app/src/main/res/layout/connect_screen.xml
+++ b/app/src/main/res/layout/connect_screen.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1C0340">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:fillViewport="true"
-        android:descendantFocusability="afterDescendants"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:descendantFocusability="afterDescendants">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -125,7 +125,6 @@
                 android:background="#C5C4C4"
                 android:ems="10"
                 android:inputType="text"
-                android:text="192.168.1.178:12345"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
